--- a/style.css
+++ b/style.css
@@ -15,14 +15,14 @@ body{
     width: 700px;
     height: 450px;
     align-self: center;
-    border-radius: 25px;
+    border-radius: 20px;
 }
 .row{
 
     display: flex;
     flex-direction: row;
     margin-top: 30px;
-
+     
 }
 .col{
     display: flex;
@@ -35,13 +35,20 @@ body{
     justify-content: space-evenly;
 
 }
+.dot {
+    height: 25px;
+    width: 25px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+  }
  
 #pic{
-
+     
     border: 2px solid rgb(224, 129, 177);
     border-radius: 50%;
-
-
+     
+    
 }
 .name{
     font-size: x-large;
@@ -50,6 +57,7 @@ body{
 }
 .score{
     font-size: xx-large;
+    font-weight: bold;
     align-content: center;
 
 }
@@ -66,7 +74,7 @@ body{
     font-size: x-large;
     color: cornsilk;
     padding: 10px;
-    margin-top: 20px;
+    margin-top: 10px;
     margin-bottom: 20px;
     border-radius: 20px;
     outline: none;
@@ -91,11 +99,20 @@ body{
     font-size: xx-large;
     color: rgba(240, 11, 99, 0.993); 
     text-align: center;
-    margin-top: 50px;
-    border: 3px solid blueviolet;
+    margin-top: 5px;
+    border: none;
+    outline: none;
     border-radius: 50px;
-    margin-right: 200px;
-    margin-left: 200px;
+    margin-right: 20px;
+    margin-left: 20px;
 
 
+}
+
+.round{
+    width : 25px;
+	height : 25px;
+	border: 1px solid #000;
+	display: inline-block;
+	border-radius: 50%;
 }
